--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,16 +1,18 @@
 <h1>Projects#index</h1>
-
+<%= link_to "Add a project", new_project_path %>
 <table>
-  <th>
-    <td>Number</td>
-    <td>Name</td>
-    <td></td>
-  </th>
+  <tr>
+    <th>Number</th>
+    <th>Name</th>
+    <th>Location</th>
+    <th></th>
+  </tr>
 <% @projects.each do |project| %>
   <tr>
     <td><%= project.project_num %></td>
     <td><%= project.name %></td>
-    <td><%= link_to "Details", project %>
+    <td><%= project.location %></td>
+    <td><%= link_to "Details", project %></td>
   </tr>
 <% end %>
 </table>
