Added roles to users.

--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -4,5 +4,5 @@
   <%= f.input :project_num %>
   <%= f.input :name %>
   <%= f.input :location %>
-  <%= f.submit 'Add Project' %>
+  <%= f.button :submit %>
 <% end %>
