--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,5 @@
 <h1>Details</h1>
-
+<%= link_to 'Edit this project', edit_project_path(@project) %>
 <p>
   <strong>Project Number:</strong>
   <%= @project.project_num %>
