--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -1,3 +1,25 @@
 // Place all the styles related to the tasks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#todo {
+  border: 1px solid white;
+}
+#todo.ui-sortable {
+  border: 1px solid black;
+  div {
+    cursor: move;
+  }
+  input#task_ids_ {
+    display: none;
+  }
+}
+.sort-control {
+  span {
+    text-decoration: underline;
+    cursor: pointer;
+  }
+  #save {
+    display: none;
+  }
+}
