--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the projects controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.tasks {
+  .nested_tasks {
+    margin-left: 30px;
+    .nested_tasks .nested_tasks .nested_tasks {
+      margin-left: 0;
+    }
+  }
+}
