--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -17,11 +17,7 @@
 <% end %>
 
 <h2>Add task:</h2>
-<%= simple_form_for @user.tasks.build do |f| %>
-  <%= f.input :user_id %>
-  <%= f.input :title %>
-  <%= f.button :submit %>
-<% end %>
+<%= render 'tasks/form', :task => @user.tasks.build %>
 
 <h2>Completed tasks</h2>
 <%= form_tag uncomplete_tasks_path, :method => :put do %>
