--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,14 +7,22 @@
   <%= csrf_meta_tags %>
 </head>
 <body class="<%= params[:controller] %>">
-  <div id="user_control">
-    <%= link_to "Logout", logout_path if current_user %>
+  <nav>
+    <ul>
+      <li><%= navlink "tasks", tasks_path %></li>
+      <li><%= navlink "projects", projects_path %></li>
+    </ul>
+  </nav>
+  <div id="content_wrap">
+    <div id="user_control">
+      <%= link_to "Logout", logout_path if current_user %>
+    </div>
+    <div id="flash">
+      <% flash.each do |name, msg| %>
+        <%= content_tag :div, msg, :id => "flash_#{name}" %>
+      <% end %>
+    </div>
+    <%= yield %>
   </div>
-  <div id="flash">
-    <% flash.each do |name, msg| %>
-      <%= content_tag :div, msg, :id => "flash_#{name}" %>
-    <% end %>
-  </div>
-  <%= yield %>
 </body>
 </html>
