--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -2,14 +2,45 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.tasks {
-  span.complete {
-    text-decoration: line-through;
-  }
-  .nested_tasks {
-    margin-left: 30px;
-    .nested_tasks .nested_tasks .nested_tasks {
-      margin-left: 0;
+body.projects {
+  .tasks {
+    .task {
+      margin: 8px 0;
+      padding: 8px 15px;
+      border: 1px solid black;
+      width: 300px;
+      border-radius: 12px;
+      background-image: -webkit-gradient(
+        linear,
+        left bottom,
+        left top,
+        color-stop(0, #CCC),
+        color-stop(1, #F5F5F5)
+      );
     }
+    span.complete {
+      text-decoration: line-through;
+    }
+    .nested_tasks {
+      margin-left: 30px;
+      .nested_tasks .nested_tasks .nested_tasks {
+        margin-left: 0;
+      }
+    }
+  }
+}
+
+section {
+  position: relative;
+  border: 1px solid black;
+  padding: 15px;
+  h1.fieldset {
+    position: absolute;
+    top: 0;
+    font-size: 18px;
+    line-height: 1;
+    margin: -9px 0 0; /* half of font size */
+    background: white;
+    padding: 0 3px;
   }
 }
