Simple_form configuration and styling.

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -2,6 +2,6 @@
   <%= f.input :user_id %>
   <%= f.input :parent_id %>
   <%= f.input :project_id %>
-  <%= f.input :title %>
+  <%= f.input :title, :label => 'Task Title' %>
   <%= f.button :submit %>
 <% end %>
