Added due_dates to task and project. Create edit action for tasks. Created partials for task and project. Created new view for daily list.

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -2,6 +2,7 @@
   <%= f.input :user_id %>
   <%= f.input :parent_id %>
   <%= f.input :project_id %>
-  <%= f.input :title, :label => 'Task Title' %>
+  <%= f.input :title, :label => 'Task title' %>
+  <%= f.input :due_date %>
   <%= f.button :submit %>
 <% end %>
