--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -3,29 +3,34 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body.projects {
-  .tasks {
-    .task {
-      margin: 8px 0;
-      padding: 8px 15px;
+  .placeholder {
+    background-color: #cfcfcf;
+  }
+
+  .ui-nestedSortable-error {
+    background:#fbe3e4;
+    color:#8a1f11;
+  }
+
+  ul.tasks {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    ul {
+      margin: 0 0 0 25px;
+      padding: 0;
+      list-style-type: none;
+    }
+  }
+
+  .tasks li {
+    margin: 7px 0 0 0;
+    padding: 0;
+    div  {
       border: 1px solid black;
-      width: 300px;
-      border-radius: 12px;
-      background-image: -webkit-gradient(
-        linear,
-        left bottom,
-        left top,
-        color-stop(0, #CCC),
-        color-stop(1, #F5F5F5)
-      );
-    }
-    span.complete {
-      text-decoration: line-through;
-    }
-    .nested_tasks {
-      margin-left: 30px;
-      .nested_tasks .nested_tasks .nested_tasks {
-        margin-left: 0;
-      }
+      padding: 3px;
+      margin: 0;
+      cursor: move;
     }
   }
 }
@@ -34,7 +39,7 @@ section {
   position: relative;
   border: 1px solid black;
   padding: 15px;
-  h1.fieldset {
+  h2.fieldset {
     position: absolute;
     top: 0;
     font-size: 18px;
