Created print stylesheet.

--- a/app/views/tasks/daily.html.erb
+++ b/app/views/tasks/daily.html.erb
@@ -1,4 +1,13 @@
 <table>
+  <col id='number' />
+  <col id='name' />
+  <col id='location' />
+  <col id='engineer' />
+  <col id='technician' />
+  <col id='meeting' />
+  <col id='task' />
+  <col id='task_due' />
+  <col id='proj_due' />
   <tr>
     <th>Project Number</th>
     <th>Project Name</th>
