--- a/app/views/tasks/daily.html.erb
+++ b/app/views/tasks/daily.html.erb
@@ -16,7 +16,7 @@
     <th>Engineering Technicians</th>
     <th>Project Design Meeting</th>
     <th>Tasks</th>
-    <th>Anticipate Due Date</th>
+    <th>Anticipated Due Date</th>
     <th>Required Due Date</th>
   </tr>
   <% @tasks.todo.each do |task| %>
