Added project design meeting date to project.

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -4,6 +4,7 @@
   <%= f.input :location %>
   <%= f.input :engineer %>
   <%= f.input :technician %>
+  <%= f.input :design_meeting_date %>
   <%= f.input :due_date %>
   <%= f.button :submit %>
 <% end %>
