--- a/app/views/tasks/daily.html.erb
+++ b/app/views/tasks/daily.html.erb
@@ -26,7 +26,7 @@
       <td><%= task.project.location if task.project %></td>
       <td><%= task.project.engineer if task.project %></td>
       <td><%= task.project.technician if task.project %></td>
-      <td><%= task.project.project_num if task.project %></td>
+      <td><%= task.project.design_meeting_date if task.project %></td>
       <td><%= task.title %></td>
       <td><%= task.due_date %></td>
       <td><%= task.project.due_date if task.project %></td>
