--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,13 @@
 <h1>Edit User</h1>
 
-<%= render 'form' %>
+<%= simple_form_for @user do |f| %>
+  <%= f.input :organization_id %>
+  <%= f.input :email %>
+  <fieldset>
+    <legend>Change Password</legend>
+    <p>To change your password, fill out the fields below. Leave them blank to leave your password the same.</p>
+    <%= f.input :password, :required => false %>
+    <%= f.input :password_confirmation, :required => false %>
+  </fieldset>
+  <%= f.button :submit %>
+<% end %>
