--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,9 @@
 <h1>New User</h1>
 
-<%= render 'form' %>
+<%= simple_form_for @user do |f| %>
+  <%= f.input :organization_id %>
+  <%= f.input :email %>
+  <%= f.input :password %>
+  <%= f.input :password_confirmation %>
+  <%= f.button :submit %>
+<% end %>
