--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,10 @@
   </nav>
   <div id="content_wrap">
     <div id="user_control">
-      <%= link_to "Logout", logout_path if current_user %>
+      <% if current_user %>
+        Welcome, <%= current_user.name %>
+        <%= link_to "Logout", logout_path %>
+      <% end %>
     </div>
     <div id="flash">
       <% flash.each do |name, msg| %>
