More targeted css for printing daily task list.

--- a/app/assets/stylesheets/print/daily.css.scss
+++ b/app/assets/stylesheets/print/daily.css.scss
@@ -2,7 +2,7 @@ nav, #user_control {
   display: none;
 }
 
-table {
+table#daily {
   border: 1px solid black;
   border-collapse: collapse;
   font-size: 11px;
