--- a/app/views/tasks/daily.html.erb
+++ b/app/views/tasks/daily.html.erb
@@ -1,3 +1,7 @@
+<ul class='head'>
+  <li><%= current_user.name %></li>
+  <li><%= Time.now.strftime("%m/%d/%Y") %></li>
+</ul>
 <table id='daily'>
   <col id='number' />
   <col id='name' />
