Added jQuery button and drop down menu for access to user controls.

--- a/app/views/tasks/daily.html.erb
+++ b/app/views/tasks/daily.html.erb
@@ -1,3 +1,4 @@
+<h1 id='daily'>Daily Task List</h1>
 <ul class='head'>
   <li><%= current_user.name %></li>
   <li><%= Time.now.strftime("%m/%d/%Y") %></li>
