--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,11 @@
   <div id="content_wrap">
     <div id="user_control">
       <% if current_user %>
-        Welcome, <%= current_user.name %>
-        <%= link_to "Logout", logout_path %>
+        <button> Welcome, <%= current_user.name %></button>
+        <ul class='popup_menu'>
+          <li><%= link_to "Edit Profile", edit_user_path(current_user) %></li>
+          <li><%= link_to "Logout", logout_path %></li>
+        </ul>
       <% end %>
     </div>
     <div id="flash">
