--- a/app/assets/stylesheets/screen/projects.css.scss
+++ b/app/assets/stylesheets/screen/projects.css.scss
@@ -21,15 +21,17 @@ body.projects {
       padding: 0;
       list-style-type: none;
     }
-  }
-
-  .tasks li {
-    margin: 7px 0 0 0;
-    padding: 0;
-    div  {
+    li {
+      margin: 7px 0 0 0;
+      padding: 0;
+      div  {
+        border: 1px solid white;
+        padding: 3px;
+        margin: 0;
+      }    
+    }
+    &.ui-sortable li div {
       border: 1px solid black;
-      padding: 3px;
-      margin: 0;
       cursor: move;
     }
   }
@@ -38,6 +40,7 @@ body.projects {
 section {
   position: relative;
   border: 1px solid black;
+  margin-top: 9px;
   padding: 15px;
   h2.fieldset {
     position: absolute;
